# yozuk

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  justfile  snapcraft.yaml  wapm.toml
.github/: stale.yml
.github/workflows/: audit.yml  cross-compilation.yml  cross.yml  release.yml  rust.yml  wasi.yml
adapters/shell/: Cargo.toml  README.md
adapters/shell/src/: main.rs  printer.rs
adapters/telegram/: Cargo.toml  Dockerfile  README.md
adapters/telegram/src/: main.rs  message.rs  server.rs
adapters/zuk/: Cargo.toml  Dockerfile  README.md
adapters/zuk/src/: args.rs  json.rs  main.rs  printer.rs  server.rs
bots/discord/: Cargo.toml  Dockerfile  README.md
bots/discord/src/: main.rs
bots/slack/: Cargo.toml  Dockerfile  README.md
bots/slack/src/: args.rs  block.rs  event.rs  main.rs  message.rs  user.rs
bots/telegram/: Cargo.toml  Dockerfile  README.md
bots/telegram/src/: main.rs  message.rs  server.rs
helpers/encoding/: Cargo.toml  README.md
helpers/encoding/src/: lib.rs
helpers/english/: Cargo.toml  README.md
helpers/english/src/: lib.rs  numeral.pest  numeral.rs
helpers/filetype/: Cargo.toml  README.md
helpers/filetype/src/: lib.rs
helpers/platform/: Cargo.toml  README.md
helpers/platform/src/: lib.rs  locale.rs  term.rs  time.rs
helpers/preprocessor/: Cargo.toml  README.md
helpers/preprocessor/src/: lib.rs
script/: publish.sh  wasm-pack.js
skills/base64/: Cargo.toml
skills/base64/src/: lib.rs
skills/calc/: Cargo.toml  README.md
skills/calc/src/: calc.pest  lib.rs
skills/dice/: Cargo.toml
skills/dice/src/: lib.rs  schema.json
skills/digest/: Cargo.toml
skills/digest/src/: algorithm.rs  lib.rs
skills/english/: Cargo.toml  README.md
skills/english/src/: lib.rs  stopwords.rs
skills/lipsum/: Cargo.toml
skills/lipsum/src/: lib.rs
skills/mediatype/: Cargo.toml
skills/mediatype/src/: lib.rs
skills/nanoid/: Cargo.toml
skills/nanoid/src/: lib.rs
skills/numeric/: Cargo.toml
skills/numeric/src/: lib.rs
skills/punycode/: Cargo.toml
skills/punycode/src/: lib.rs
skills/smalltalk/: Cargo.toml
skills/smalltalk/src/: lib.rs
skills/uuid/: Cargo.toml
skills/uuid/src/: lib.rs
skills/version/: Cargo.toml  README.md
skills/version/src/: lib.rs
skillset/: Cargo.toml  README.md
skillset/src/: lib.rs
skillset/src/base64/: README.md  mod.rs
skillset/src/bech32/: mod.rs
skillset/src/bitcoin/: mod.rs
skillset/src/blurhash/: base83.rs  mod.rs
skillset/src/calc/: calc.pest  function.rs  mod.rs
skillset/src/chitchat/: mod.rs  script.rs
skillset/src/color/: README.md  keywords.rs  mod.rs
skillset/src/compression/: algorithm.rs  mod.rs
skillset/src/consts/: definition.rs  mod.rs
skillset/src/dice/: README.md  dice.pest  mod.rs
skillset/src/digest/: README.md  algorithm.rs  mod.rs
skillset/src/english/: mod.rs  stopwords.rs  thesaurus.rs
skillset/src/geo/: README.md  mod.rs
skillset/src/hex/: mod.rs
skillset/src/ip/: mod.rs
skillset/src/jwt/: mod.rs
skillset/src/kdf/: algorithm.rs  mod.rs
skillset/src/lipsum/: README.md  mod.rs  schema.json
skillset/src/mediatype/: README.md  mod.rs
skillset/src/msgpack/: mod.rs
skillset/src/nanoid/: README.md  mod.rs
skillset/src/numeric/: README.md  mod.rs
skillset/src/password/: mod.rs
skillset/src/prime/: mod.rs
skillset/src/punycode/: README.md  mod.rs  tld.rs
skillset/src/qrcode/: mod.rs
skillset/src/smalltalk/: README.md  mod.rs  script.rs
skillset/src/time/: README.md  format.rs  mod.rs
skillset/src/unicode/: mod.rs
skillset/src/unit/: conversion.rs  entry.rs  mod.rs  symbol.rs  table.rs  unit.rs
skillset/src/urlencode/: mod.rs
skillset/src/username/: dictionary.rs  mod.rs
skillset/src/uuid/: README.md  mod.rs
skillset/src/version/: mod.rs
yozuk/: Cargo.toml  build.rs
yozuk-bundle/: Cargo.toml  README.md  build.rs
yozuk-bundle/src/: lib.rs
yozuk-model/: Cargo.toml  README.md
yozuk-model/src/: labeler.rs  lib.rs  modelgen.rs  tagger.rs
yozuk-sdk/: Cargo.toml  README.md
yozuk-sdk/src/: args.rs  blob.rs  block.rs  display.rs  encoding.rs  env.rs  feature.rs  highlight.rs  i18n.rs  lib.rs  locale.rs  metadata.rs  model.rs  output.rs  prelude.rs  preprocessor.rs  serde_bytes.rs  skill.rs  stream.rs  token.pest  token.rs  tokenizer.rs  user.rs
yozuk-wasm/: Cargo.toml  node.ts  output.ts  package-lock.json  package.json  prepare.js  tsconfig.json  web.js  web.ts  yozuk.ts
yozuk-wasm/scripts/: download.js  install.js  preinstall.js
yozuk-wasm/src/: lib.rs
yozuk/src/: labeler.rs  lib.rs  model.rs  modelgen.rs  skill.rs  tagger.rs  token.pest  tokenizer.rs
yozuk/tests/: base64_test.rs  bech32.rs  bech32_test.rs  bitcoin_test.rs  blurhash_test.rs  calc_test.rs  chitchat_test.rs  color_test.rs  common.rs  consts_test.rs  dice_test.rs  digest_test.rs  geo_test.rs  hex_test.rs  ip_test.rs  jwt_test.rs  kdf_test.rs  lipsum_test.rs  msgpack_test.rs  nanoid_test.rs  numeric_test.rs  password_test.rs  prime_test.rs  punycode_test.rs  qrcode_test.rs  redirection_test.rs  smalltalk_test.rs  suggests_test.rs  time_test.rs  unicode_test.rs  unit_test.rs  urlencode_test.rs  username_test.rs  uuid_test.rs  version_test.rs
zuk/: Cargo.toml  README.md
zuk/src/: args.rs  main.rs  printer.rs  repl.rs  rpc.rs  server.rs  term.rs
