[workspace]
members = ["yozuk", "yozuk-sdk", "yozuk-model", "yozuk-wasm", "skillset", "zuk", "helpers/*"]
resolver = "2"

[profile.release]
strip = true
lto = true

[patch.crates-io]
yozuk-sdk = { path = "./yozuk-sdk" }
yozuk-helper-english = { path = "./helpers/english" }
yozuk-helper-platform = { path = "./helpers/platform" }
yozuk-helper-filetype = { path = "./helpers/filetype" }
yozuk-helper-encoding = { path = "./helpers/encoding" }
yozuk-core-skillset = { path = "./skillset" }
yozuk = { path = "./yozuk" }
yozuk-model = { path = "./yozuk-model" }

[profile.dev.package.crfsuite]
opt-level = 3

[profile.dev.package.yozuk-model]
opt-level = 3

[profile.dev.package.rayon]
opt-level = 3