[package]
name = "yozuk-core-skillset"
version = "0.11.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Set of default Yozuk skills"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/skillset"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-core-skillset"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bigdecimal = { version = "0.3.0", optional = true }
bitcoin = { version = "0.28.0", features = ["rand"], optional = true }
blake2 = { version = "0.10.4", optional = true }
blake3 = { version = "1.3.1", default-features = false, features = [
  "traits-preview",
], optional = true }
chardetng = { version = "0.1.17", optional = true }
chrono = { version = "0.4.19", features = ["wasmbind"], optional = true }
chrono-tz = { version = "0.6.1", optional = true }
clap = { version = "3.1.6", features = ["derive"] }
const-sha1 = "0.2.0"
crc_all = { version = "0.2.0", optional = true }
css-color = { version = "0.2.4", optional = true }
digest = { version = "0.10.3", optional = true }
entropy = "0.4.1"
fuzzydate = { version = "0.1.5", optional = true }
getrandom = { version = "0.2.5", features = ["js"] }
hex = { version = "0.4.3", optional = true }
itertools = "0.10.3"
lazy_static = "1.4.0"
lipsum = { version = "0.8.0", optional = true }
md-5 = { version = "0.10.1", optional = true }
mediatype = "0.19.2"
nanoid = { version = "0.4.0", optional = true }
num-bigint = { version = "0.4", optional = true }
open-location-code = { version = "0.1.0", optional = true }
palette = { version = "0.6.0", optional = true }
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
punycode = { version = "0.4.1", optional = true }

rand = { version = "0.8.5", features = ["small_rng"], optional = true }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha1 = { version = "0.10.1", optional = true }
sha2 = { version = "0.10.2", optional = true }
sha3 = { version = "0.10.1", optional = true }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
uuid = { version = "1.0.0", features = ["v4"], optional = true }
yozuk-helper-english = "0.1.0"
yozuk-helper-preprocessor = "0.11.0"
yozuk-sdk = "0.11.0"

[features]
default = [
  "yozuk-skill-mediatype",
  "yozuk-skill-version",
  "yozuk-skill-base64",
  "yozuk-skill-english",
  "yozuk-skill-smalltalk",
  "yozuk-skill-numeric",
  "yozuk-skill-calc",
  "yozuk-skill-uuid",
  "yozuk-skill-lipsum",
  "yozuk-skill-nanoid",
  "yozuk-skill-punycode",
  "yozuk-skill-dice",
  "yozuk-skill-digest",
  "yozuk-skill-color",
  "yozuk-skill-time",
  "yozuk-skill-unit",
  "yozuk-skill-geo",
  "yozuk-skill-password",
  "yozuk-skill-bitcoin",
]
yozuk-skill-base64 = ["chardetng"]
yozuk-skill-calc = ["bigdecimal", "pest", "pest_derive"]
yozuk-skill-color = ["css-color", "palette"]
yozuk-skill-dice = ["rand", "pest", "pest_derive"]
yozuk-skill-digest = [
  "digest",
  "hex",
  "md-5",
  "sha1",
  "sha2",
  "sha3",
  "crc_all",
  "blake2",
  "blake3",
]
yozuk-skill-english = []
yozuk-skill-geo = ["open-location-code"]
yozuk-skill-lipsum = ["lipsum"]
yozuk-skill-mediatype = []
yozuk-skill-nanoid = ["nanoid"]
yozuk-skill-numeric = []
yozuk-skill-password = ["rand"]
yozuk-skill-punycode = ["punycode"]
yozuk-skill-smalltalk = []
yozuk-skill-time = ["chrono", "fuzzydate", "chrono-tz"]
yozuk-skill-unit = ["bigdecimal", "num-bigint"]
yozuk-skill-uuid = ["uuid"]
yozuk-skill-version = []
yozuk-skill-bitcoin = ["bitcoin"]

