[package]
name = "yozuk-core-skillset"
version = "0.18.3"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Set of default Yozuk skills"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/skillset"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-core-skillset"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bech32 = { version = "0.9.0", optional = true }
bigdecimal = "0.3.0"
bitcoin = { version = "0.28.0", features = ["rand"], optional = true }
blake2 = { version = "0.10.4", optional = true }
blake3 = { version = "1.3.1", default-features = false, features = [
  "traits-preview",
], optional = true }
blurhash = { version = "0.1.1", optional = true }
clap = { version = "3.1.6", features = ["derive"] }
const-sha1 = "0.2.0"
crc_all = { version = "0.2.0", optional = true }
css-color = { version = "0.2.4", optional = true }
digest = { version = "0.10.3", optional = true }
entropy = "0.4.1"
fraction = "0.11.0"
getrandom = { version = "0.2.5", features = ["js"] }
hex = { version = "0.4.3", optional = true }
itertools = "0.10.3"
lipsum = { version = "0.8.0", optional = true }
maplit = "1.0.2"
md-5 = { version = "0.10.1", optional = true }
mediatype = "0.19.3"
miller_rabin = { version = "1.1.1", default-features = false, optional = true }
nanoid = { version = "0.4.0", optional = true }
num-bigint = { version = "0.4", optional = true }
open-location-code = { version = "0.1.0", optional = true }
palette = { version = "0.6.0", optional = true }
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
pix = { version = "0.13.1", optional = true }
png_pong = { version = "0.8.2", optional = true }
prime_tools = { version = "0.3.4", optional = true }
punycode = { version = "0.4.1", optional = true }
qrcode-generator = { version = "4.1.6", default-features = false, optional = true }
rand = { version = "0.8.5", features = ["small_rng"], optional = true }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha1 = { version = "0.10.1", optional = true }
sha2 = { version = "0.10.2", optional = true }
sha3 = { version = "0.10.1", optional = true }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
time = { version = "0.3.9", features = ["formatting"], optional = true }
time-tz = { version = "1.0.2", features = ["db"], optional = true }
urlencoding = { version = "2.1.0", optional = true }
uuid = { version = "1.0.0", features = ["v4"], optional = true }
yozuk-helper-english = "0.19.1"
yozuk-helper-preprocessor = "0.19.1"
yozuk-helper-platform = "0.18.1"
yozuk-helper-filetype = "0.19.1"
yozuk-sdk = "0.19.1"
once_cell = "1.12.0"
rmpv = { version = "1.0.0", optional = true, features = ["with-serde"] }
phf = { version = "0.10.1", features = ["macros"] }

[features]
default = []
rayon = ["miller_rabin?/rayon"]
wild = []
yozuk-skill-base64 = []
yozuk-skill-calc = ["pest", "pest_derive"]
yozuk-skill-color = ["css-color", "palette"]
yozuk-skill-dice = ["rand", "pest", "pest_derive"]
yozuk-skill-digest = [
  "digest",
  "hex",
  "md-5",
  "sha1",
  "sha2",
  "sha3",
  "crc_all",
  "blake2",
  "blake3",
]
yozuk-skill-geo = ["open-location-code"]
yozuk-skill-lipsum = ["lipsum"]
yozuk-skill-mediatype = []
yozuk-skill-nanoid = ["nanoid"]
yozuk-skill-numeric = []
yozuk-skill-password = ["rand"]
yozuk-skill-punycode = ["punycode"]
yozuk-skill-smalltalk = ["rand"]
yozuk-skill-unit = ["num-bigint"]
yozuk-skill-uuid = ["uuid"]
yozuk-skill-version = []
yozuk-skill-bitcoin = ["bitcoin"]
yozuk-skill-urlencode = ["urlencoding"]
yozuk-skill-bech32 = ["bech32"]
yozuk-skill-prime = ["num-bigint", "miller_rabin", "prime_tools"]
yozuk-skill-jwt = []
yozuk-skill-blurhash = ["blurhash", "png_pong", "pix"]
yozuk-skill-qrcode = ["qrcode-generator", "png_pong", "pix"]
yozuk-skill-consts = []
yozuk-skill-time = ["time", "time-tz"]
yozuk-skill-ip = []
yozuk-skill-msgpack = ["rmpv"]
