[package]
name = "yozuk-bundle"
version = "0.4.1"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Prebuild NLP model for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk-bundle"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-bundle"
license = "MIT"
readme = "README.md"

[build-dependencies]
anyhow = "1.0.56"
yozuk = { version = "0.4.2", features = ["modelgen"] }
yozuk-sdk = "0.1.0"
