[package]
name = "yozuk-sdk"
version = "0.3.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Types used in the Yozuk ecosystem"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/yozuk-sdk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-sdk"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bytes = { version = "1.1.0", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
entropy = "0.4.1"
itertools = "0.10.3"
jsonschema-valid = "0.4.0"
mediatype = { version = "0.19.1", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
slog = "2.7.0"
sloggers = "2.1.1"

