[package]
name = "yozuk-sdk"
version = "0.18.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Types used in the Yozuk ecosystem"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/yozuk-sdk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-sdk"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
mediatype = { version = "0.19.3", features = ["serde"] }
pest = "2.1.3"
pest_derive = "2.1.0"
secstr = { version = "0.5.0", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
url = { version = "2.2.2", features = ["serde"] }
