[package]
name = "yozuk-wasm"
version = "0.1.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Yozuk wasm port"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk"
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
mediatype = "0.19.3"
once_cell = "1.12.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
yozuk = "0.19.3"
yozuk-sdk = "0.20.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2.80"