[package]
name = "yozuk"
version = "0.16.2"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Assistant Bot for Programmers"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk"
license = "MIT"
readme = "../README.md"

[dependencies]
anyhow = "1.0.56"
bytes = "1.1.0"
const-sha1 = "0.2.0"
crfs = "0.2.0"
distance = "0.4.0"
mediatype = "0.19.3"
rayon = { version = "1.5.1", optional = true }
yozuk-core-skillset = "0.16.2"
yozuk-helper-english = "0.1.0"
yozuk-sdk = "0.16.2"
yozuk-model = "0.16.2"

[features]
default = ["default-skills"]
rayon = ["dep:rayon", "yozuk-model/rayon"]
default-skills = [
  "yozuk-skill-mediatype",
  "yozuk-skill-version",
  "yozuk-skill-base64",
  "yozuk-skill-smalltalk",
  "yozuk-skill-numeric",
  "yozuk-skill-calc",
  "yozuk-skill-uuid",
  "yozuk-skill-lipsum",
  "yozuk-skill-nanoid",
  "yozuk-skill-punycode",
  "yozuk-skill-dice",
  "yozuk-skill-digest",
  "yozuk-skill-color",
  "yozuk-skill-unit",
  "yozuk-skill-geo",
  "yozuk-skill-password",
  "yozuk-skill-urlencode",
  "yozuk-skill-bech32",
  "yozuk-skill-prime",
  "yozuk-skill-jwt",
  "yozuk-skill-blurhash",
]
yozuk-skill-base64 = ["yozuk-core-skillset/yozuk-skill-base64"]
yozuk-skill-calc = ["yozuk-core-skillset/yozuk-skill-calc"]
yozuk-skill-color = ["yozuk-core-skillset/yozuk-skill-color"]
yozuk-skill-dice = ["yozuk-core-skillset/yozuk-skill-dice"]
yozuk-skill-digest = ["yozuk-core-skillset/yozuk-skill-digest"]
yozuk-skill-geo = ["yozuk-core-skillset/yozuk-skill-geo"]
yozuk-skill-lipsum = ["yozuk-core-skillset/yozuk-skill-lipsum"]
yozuk-skill-mediatype = ["yozuk-core-skillset/yozuk-skill-mediatype"]
yozuk-skill-nanoid = ["yozuk-core-skillset/yozuk-skill-nanoid"]
yozuk-skill-numeric = ["yozuk-core-skillset/yozuk-skill-numeric"]
yozuk-skill-password = ["yozuk-core-skillset/yozuk-skill-password"]
yozuk-skill-punycode = ["yozuk-core-skillset/yozuk-skill-punycode"]
yozuk-skill-smalltalk = ["yozuk-core-skillset/yozuk-skill-smalltalk"]
yozuk-skill-unit = ["yozuk-core-skillset/yozuk-skill-unit"]
yozuk-skill-uuid = ["yozuk-core-skillset/yozuk-skill-uuid"]
yozuk-skill-version = ["yozuk-core-skillset/yozuk-skill-version"]
yozuk-skill-bitcoin = ["yozuk-core-skillset/yozuk-skill-bitcoin"]
yozuk-skill-urlencode = ["yozuk-core-skillset/yozuk-skill-urlencode"]
yozuk-skill-bech32 = ["yozuk-core-skillset/yozuk-skill-bech32"]
yozuk-skill-prime = ["yozuk-core-skillset/yozuk-skill-prime"]
yozuk-skill-jwt = ["yozuk-core-skillset/yozuk-skill-jwt"]
yozuk-skill-blurhash = ["yozuk-core-skillset/yozuk-skill-blurhash"]

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1.0.56"
yozuk-core-skillset = "0.16.2"
yozuk-sdk = "0.16.2"
yozuk-model = { version = "0.16.2", features = ["modelgen"] }
