[package]
name = "zuk"
version = "0.12.0"
edition = "2021"
default-run = "zuk"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Yozuk command-line interface"
keywords = ["yozuk"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
repository = "https://github.com/yozuk/yozuk/zuk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/zuk"
license = "MIT"
readme = "../README.md"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
content_inspector = "0.2.4"
crossterm = "0.23.1"
hexyl = "0.9.0"
localzone = "0.2.0"
mediatype = "0.19.2"
owo-colors = "3.3.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
shell-words = "1.1.0"
sys-locale = "0.2.0"
toml = "0.5.8"
yozuk = "0.13.0"
yozuk-bundle = "0.13.0"
yozuk-sdk = "0.13.0"

[features]
default = []
