[package]
name = "zuk"
version = "0.18.0"
edition = "2021"
default-run = "zuk"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Yozuk command-line interface"
keywords = ["yozuk"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
repository = "https://github.com/yozuk/yozuk/zuk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/zuk"
license = "MIT"
readme = "../README.md"

[dependencies]
anyhow = "1.0.56"
base64 = { version = "0.13.0", optional = true }
chardetng = "0.1.17"
clap = { version = "3.1.6", features = ["derive"] }
crossterm = "0.23.1"
css-color = "0.2.4"
encoding_rs = "0.8.31"
hexyl = "0.10.0"
json-rpc2 = { version = "0.11.1", optional = true }
mediatype = "0.19.3"
owo-colors = "3.3.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
serde = { version = "1.0.137", optional = true }
serde_derive = { version = "1.0.137", optional = true }
serde_json = { version = "1.0.81", optional = true }
shell-words = "1.1.0"
sys-locale = "0.2.0"
time-tz = { version = "1.0.2", features = ["system"] }
yozuk = { version = "0.18.0" }
yozuk-sdk = "0.18.0"

[target.'cfg(target_os = "linux")'.dependencies]
extrasafe = { version = "0.1.2", optional = true }
syscalls = { version = "0.5.0", optional = true }

[features]
default = ["rayon", "rpc", "secure-context"]
rayon = ["yozuk/rayon"]
rpc = ["json-rpc2", "serde", "serde_derive", "serde_json", "base64"]
secure-context = ["extrasafe", "syscalls"]

[dev-dependencies]
tempfile = "3.3.0"
