[package]
name = "yozuk-telegram"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
log = "0.4.14"
mediatype = "0.19.1"
new_mime_guess = "4.0.1"
pretty_env_logger = "0.4.0"
reqwest = "0.11.9"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
slog = "2.7.0"
sloggers = "2.1.1"
teloxide = "0.7.1"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
toml = "0.5.8"
tree_magic = "0.2.3"
warp = "0.3.2"
yozuk = "0.4.2"
yozuk-bundle = "0.4.2"
yozuk-sdk = "0.1.0"
