[package]
name = "zuk"
version = "0.1.0"
edition = "2021"
default-run = "zuk"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.0"
content_inspector = "0.2.4"
hexyl = "0.9.0"
serde_json = "1.0.79"
sloggers = "2.1.1"
termimad = "0.20.0"
yozuk = { path = "../../yozuk" }
yozuk-sdk = { path = "../../yozuk-sdk" }
yozuk-bundle = { path = "../../yozuk-bundle" }
shell-words = "1.1.0"
toml = "0.5.8"
mediatype = "0.19.1"
serde_yaml = "0.8.23"
rustyline = "9.1.2"
crossterm = "0.23.1"
serde_derive = "1.0.136"
serde = "1.0.136"
warp = { version = "0.3.2", optional = true }
tokio = { version = "1.17.0", optional = true }

[features]
default = []
server = ["warp", "tokio"]
