[package]
name = "zuk"
version = "0.4.1"
edition = "2021"
default-run = "zuk"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Yozuk command-line interface"
keywords = ["yozuk"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
repository = "https://github.com/yozuk/yozuk/adapters/zuk"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/zuk"
license = "MIT"
readme = "../../README.md"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
console = "0.15.0"
content_inspector = "0.2.4"
hexyl = "0.9.0"
serde_json = "1.0.79"
sloggers = "2.1.1"
termimad = "0.20.0"
yozuk = "0.4.2"
yozuk-sdk = "0.1.0"
yozuk-bundle = "0.4.2"
shell-words = "1.1.0"
toml = "0.5.8"
mediatype = "0.19.1"
serde_yaml = "0.8.23"
rustyline = "9.1.2"
crossterm = "0.23.1"
serde_derive = "1.0.136"
serde = "1.0.136"
warp = { version = "0.3.2", optional = true }
tokio = { version = "1.17.0", optional = true }
futures-util = { version = "0.3.21", optional = true }
rustyline-derive = "0.6.0"

[features]
default = ["http-server"]
http-server = ["warp", "tokio", "futures-util"]
