[package]
name = "yozuk-discord"
version = "0.22.4"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["env"] }
futures = "0.3.21"
lazy-regex = "2.3.0"
mediatype = "0.19.5"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "http",
] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
yozuk = "0.22.4"
yozuk-sdk = "0.22.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yozuk = { version = "0.22.4", features = ["rayon"] }
