[package]
name = "yozuk-slack"
version = "0.21.3"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.140"
serde_derive = "1.0.140"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", features = ["json", "stream", "multipart"] }
warp = "0.3.2"
yozuk = "0.21.3"
yozuk-sdk = "0.21.3"
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["env"] }
tempfile = "3.3.0"
mediatype = "0.19.5"
futures-util = "0.3.21"
gh-emoji = "1.0.7"
lazy-regex = "2.3.0"
