[package]
name = "yozuk-slack"
version = "0.22.4"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.140"
serde_derive = "1.0.140"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", features = ["json", "stream", "multipart"] }
warp = "0.3.2"
yozuk = "0.22.4"
yozuk-sdk = "0.22.0"
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["env"] }
tempfile = "3.3.0"
mediatype = "0.19.5"
gh-emoji = "1.0.7"
lazy-regex = "2.3.0"
websocket-lite = "0.5.2"
futures = "0.3.21"
serde_json = "1.0.83"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yozuk = { version = "0.22.4", features = ["rayon"] }
