[package]
name = "yozuk-helper-encoding"
version = "0.22.7"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "English NLP utilities for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/encoding"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-encoding"
license = "MIT"
readme = "README.md"

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
yozuk-sdk = "0.22.7"
