[package]
name = "yozuk-helper-english"
version = "0.1.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "English NLP utilities for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/english"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-english"
license = "MIT"
readme = "README.md"

[dependencies]
Inflector = "0.11.4"
distance = "0.4.0"
singularize = "0.1.0"
